# release-note-formatter

./: .gitignore  Cargo.toml  Dioxus.toml  Makefile.toml  README.md  index.html  sample.md  sample.txt
docs/: index-5f8e0baec7eb592e.js  index-5f8e0baec7eb592e_bg.wasm  index-bc7e56b8245a600e.js  index-bc7e56b8245a600e_bg.wasm  index.html
docs/assets/: main.css  release-note-formatter-dxh5faa46f793f01f3.js  release-note-formatter-dxh82e29ee49040fc97.js  release-note-formatter_bg-dxh2a27d7d093d92ec5.wasm  release-note-formatter_bg-dxh911ce8c451c35112.wasm
public/: index.html
public/assets/: main-dxh17eaaeaf33cc923.css  main-dxh28fa8a8694490c.css  release-note-formatter-dxh4313486e53b2020.js  release-note-formatter-dxhb7a07e168f7d9a7a.js  release-note-formatter-dxhcb766a54d97b8170.js  release-note-formatter-dxhdc30fd92674e1465.js  release-note-formatter-dxhe47e86ca4d9b739.js  release-note-formatter-dxhfc353169959e13d0.js  release-note-formatter_bg-dxh4e8553f51eb9a6e.wasm  release-note-formatter_bg-dxh64b9465742d639d.wasm  release-note-formatter_bg-dxh883137322f677f65.wasm  release-note-formatter_bg-dxha7b0b8f2d9c7c690.wasm  release-note-formatter_bg-dxha8257a7e5a14fa8c.wasm  release-note-formatter_bg-dxhc0e4b6319b9b94d.wasm
src/: main.rs
