[package]
name = "release-note-formatter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7", features = ["web"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }
regex = "1.12.3"
wasm-bindgen = "0.2.117"
wasm-bindgen-futures = "0.4.55"
web-sys = { version = "0.3.82", features = ["Clipboard", "Navigator", "Window"] }
